# safecode-arena

./: Cargo.toml  README.md
ai-code-verifier/: LICENSE  README.ja.md  README.md
ai-code-verifier/docs/: implementation-guide.md  tech-stack.md
ai-code-verifier/docs/adr/: ADR-001-language-choice.md  ADR-002-sandbox-strategy.md  ADR-007-wasm-sandbox.md
ai-code-verifier/src/: analysis.rs  config.rs  lib.rs  model.rs  pipeline.rs  scoring.rs
ai-code-verifier/tests/: evaluate.rs
docs/: data-model.md  implementation-guide.md  spec.md  tech-stack.md
docs/adr/: ADR-001-subprocess-isolation.md  ADR-002-wasmtime-sandbox.md  ADR-003-scoring-model.md  ADR-003-scoring-weights.md  ADR-004-cli-library-split.md  ADR-004-sqlite-results.md  ADR-005-persistence-deferred.md  ADR-006-phase3-lightweight-scoring.md  ADR-008-multi-language.md
errors/rust/: wasmtime-error-downcast-rewrap.md
errors/system/: wasmtime-build-oom.md
src/: analysis.rs  config.rs  lib.rs  main.rs  model.rs  pipeline.rs  report.rs  runner.rs  scoring.rs  store.rs  wasm.rs
tests/: evaluate.rs
