[package]
name = "safecode-arena"
version = "0.1.0"
edition = "2021"
description = "AI生成コード候補を安全な環境で自動検証・採点する検証ランナー"
license = "MIT"

[[bin]]
name = "safecode"
path = "src/main.rs"

[lib]
name = "safecode_arena"
path = "src/lib.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
# シリアライズ（候補メタデータ・レポート・採点結果）
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
# エラー処理
anyhow = "1"
thiserror = "2"
# サンドボックス実行（一時ディレクトリ・プロセス制御）
tempfile = "3"
# 子プロセスのタイムアウト kill
wait-timeout = "0.2"
# タイムスタンプ（レポート生成）
chrono = { version = "0.4", features = ["serde"] }

# --- 発展フェーズ用（MVP では未使用。Phase が進んだら有効化） ---
# wasmtime = "29"        # WASI サンドボックス
# tree-sitter = "0.24"   # 静的解析・コード類似度
# rusqlite = "0.32"      # 結果永続化

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
