[package]
name = "safecode-arena"
version = "0.1.0"
edition = "2021"
description = "Automated evaluation runner for AI-generated code candidates"

[[bin]]
name = "safecode-arena"
path = "src/main.rs"

[dependencies]
tokio      = { version = "1", features = ["full", "process"] }
wasmtime   = { version = "28", features = ["component-model"] }
wasmtime-wasi = "28"
rusqlite   = { version = "0.31", features = ["bundled"] }
tempfile   = "3"
serde      = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
clap       = { version = "4", features = ["derive"] }
anyhow     = "1"
uuid       = { version = "1", features = ["v4"] }
chrono     = { version = "0.4", features = ["serde"] }
